--- a/tipkor/stamp/templates/stamp/success.html
+++ b/tipkor/stamp/templates/stamp/success.html
@@ -40,8 +40,7 @@
                 </div>
 
                 <div class="col">
-                    <h3 style="color: rgb(1, 58, 124);">Готовность: {{ order.ready_date.time }}, {{
-                        order.ready_date.date }}</h3>
+                    <h3 style="color: rgb(1, 58, 124);">Готовность: {{ order.ready_date.time }}, {{ order.ready_date.date }}</h3>
                 </div>
 
                 <div class="col">
