--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col">
                     <h3 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date.date }} После 14:00</h3>
-                    <p>При заказе сегодня до 15:00</p>
+                    <p>При согласовании сегодня до 15:00</p>
                 </div>
             </div>
         </div>
@@ -86,7 +86,6 @@
 
 
 
-</div>
 
 <br><br>
 
