--- a/tipkor/wide/templates/wide/banner.html
+++ b/tipkor/wide/templates/wide/banner.html
@@ -11,24 +11,45 @@
 
 
 
+<!-- Заголовок коллапс блока -->
 <div class="container">
-    <div class="card_text">
-        <p>-----------------</p>
+    <div class="card_collapse_block">
+        <div class="container py-3">
+            <a class="" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
+                aria-controls="snap_items_collapse">
+                <h4 class="how_snap">Баннер, люверсы и постобработка...</h4>
+            </a>
+            <!-- Блок пояснений, коллапс -->
+            <div class="collapse" id="snap_items_collapse">
+                <div class="row d-flex justify-content-start my-2">
+                    <!-- карточка -->
+                    <div class="card text-center mx-3 mb-2" style="width: 30rem;">
+                        <h5 class="card-header">Обычная</h5>
+                        <img src="{% static '/stamp/img/c_norm_snap.jpg' %}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Описание с картинками Возможно карточки (картон, офсет, тиражи)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <h1 class="title_text">Баннеры</h1>
 </div>
 
 <!-- Форма -->
 <div class="container">
-    <div class="card_form border shadow p-3">
-        <div class="row">
+    <hr width="100%" size="8" color="#0d6efd" />
+    <h1 id="after_calc" class="title_text pt-3">Изготовление баннеров</h1>
 
-            <div class="col-xl-5 col-lg-7 col-md-8 col-sm-6">
-                <form class="form-control-lg " action="{% url 'wide:banner' %}" method="post">
+    <div class="calc_form border shadow rounded p-3 mt-4">
+
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-10 col-sm-12">
+                <form class="form-control-lg " action="{% url 'wide:banner' %}#after_calc" method="post">
                     {% csrf_token %}
                     <div class="row">
-                        <!-- Ошибка поля рамера -->
 
+                        <!-- Ошибка поля рамера -->
                         <div class="col">
                             {% if form.errors %}
                             {% for error in form.errors.as_data.values %}
@@ -63,24 +84,24 @@
                             <div class="col">{{ calc_form.post_obr }}<p>Обработка и люверсы</p>
                             </div>
                             <button type="submit" class="calc_button btn btn-primary" name="calc_form">Расчет</button>
-                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
+                            <h6>Нажмите "Расчет", что бы сформировать заказ</h6>
                         </div>
                     </div>
                 </form>
             </div>
 
-            <div class="card_img col">
-                Про баннеры
+            <div class="calc_img col ">
+                <img class="img-fluid" src="{% static '/wide/img/banner.jpg' %}" alt="">
             </div>
         </div>
-        <!-- Результат -->
     </div>
 </div>
 
+<!-- Результат -->
 <br><br>
 <div class="container">
-    <div class="result_info p-3 border shadow">
-        <div class="row px-3">
+    <div class="result_info p-3 shadow border rounded">
+        <div class="row py-3 mx-1 border border-bg-secondary border-2 rounded bg-light">
             <div class="col col-xl-3">
                 {% if result.id and not form.errors %}
                 {% if result.cost == 500 %}
@@ -88,26 +109,21 @@
                 {% else %}
                 <h3>Стоимость: {{ result.cost }} руб.</h3>
                 {% endif %}
-
                 <h5>Размер: {{ result.wide_size }}х{{ result.heigth_size }}</h5>
                 <h5>Материал: {{ result.material_print }}</h5>
                 <h5>Обработка: {{ result.post_obr }}</h5>
             </div>
             <div class="col">
-                <h3 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}</h3>
-                <p>При заказе сегодня до 15:00</p>
+                <h3 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date.date }} После 14:00</h3>
+                <p>При согласовании сегодня до 15:00</p>
             </div>
 
             <div class="pt-4">
-                <a class="confirm_button btn btn-success" href="confirm/{{ result.id }}"> заказать</a>
+                <a class="confirm_button btn btn-success" href="confirm/{{ result.id }}#a_confirm">Оформить заказ</a>
             </div>
             <div class="more_info">
-                <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
+                <h6>Нажмите "Оформить заказ" для продолжения.</h6>
             </div>
-
-
-
-
             {% else %}
 
             <h2 style="color: rgb(145, 1, 30);">Выбирете параметры и нажмите "Расчет".</h2>
@@ -115,7 +131,6 @@
             {% endif %}
         </div>
     </div>
-
 </div>
 
 <div class="container">
