--- a/tipkor/wide/templates/wide/confirm.html
+++ b/tipkor/wide/templates/wide/confirm.html
@@ -8,86 +8,84 @@
     <link rel="stylesheet" type="text/css" href="{% static 'wide/css/wide.css' %}">
 </head>
 <br>
-<br>
-<br>
+
 
 
 <div class="container">
-    <div class="confirm_order border shadow p-3">
-        <div class="row px-3">
-            <p> Скачать правила подготовки макета PDF 0.6 MB или ссылка на страницу с правилами</p>
-            <h1>Подтвердить заказ</h1>
-            <div>
-                <div class="col">
-                    <h2>{{ type_production }}</h2>
 
-                    <h5 style="color: rgb(93, 3, 131);">Размер: {{ order.wide_size }}х{{ order.heigth_size }}</h5>
-                    <h5 style="color: rgb(93, 3, 131);">Материал: {{ order.material_print }}</h5>
-                    <h5 style="color: rgb(93, 3, 131);">Обработка: {{ order.post_obr }}</h5>
-                    <h2 style="color: rgb(145, 1, 30);">Стоимость: {{ order.cost }} руб.</h2>
+    <div class="confirm_order border shadow rounded p-3">
+        <div class="row py-3 mx-1 border border-bg-secondary border-2 rounded bg-light">
+
+            <div class="row px-3">
+                <h1 id="a_confirm">Подтверждение заказа</h1>
+                <h2>{{ type_production }}</h2>
+                <div class="col col-xl-3">
+                    <h3>Стоимость: {{ order.cost }} руб.</h3>
+                    <h5>Размер: {{ order.wide_size }}х{{ order.heigth_size }}м</h5>
+                    <h5>Материал: {{ order.material_print }}</h5>
+                    <h5>Обработка: {{ order.post_obr }}</h5>
 
                 </div>
                 <div class="col">
-                    <h2 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date|date:"d.m.Y" }}г.</h2>
-                    <p>При заказе сегодня до 15:00</p>
+                    <h3 style="color: rgb(1, 58, 124);">Готовность: {{ ready_date.date }} После 14:00</h3>
+                    <p>При согласовании сегодня до 15:00</p>
                 </div>
-            </div>
-            <div>
-                <form class="form-control-lg " action="{% url 'wide:confirm' order.id %}" method="post">
-                    <div class="row">
-                        {% csrf_token %}
-                        {{ form.type_production }}
-
-
-                        <div class="pb-4">
-                            <p>Прикрепите файл: </p>{{ form.file }}
-                        </div>
-
-                        <div class="">
-                            <p>Kомментарий к заказу:</p>
-                            {{ form.comment }}
-                        </div>
-                    </div>
-
-                    <!-- Данные клиента -->
-                    <br>
-                    <div class="row py-3 mx-1 border border-primary border-2 rounded">
-                        <h3>Контактные данные:</h3>
-                        <div class="col">
-                            <p>Имя: </p>{{ form.name }}
-                        </div>
-                        <div class="col">
-                            <p>E-mail: </p>{{ form.email }}
-                        </div>
-                        <div class="col">
-                            <p>Телефон: </p>{{ form.tel }}
-                        </div>
-                    </div>
-
-
-                    <div class="row pt-4">
-                        <div class="col ">
-                            <button style="width: 200px;" type="submit"
-                                class="yes_button btn btn-primary">заказать</button>
-                            <div class="more_info">
-                                <h6>Нажмите "заказать", что бы отправить нам заказ.</h6>
-                            </div>
-                            <!-- <button href="{% url 'poly:card' %}" class="reset_button btn btn-danger" value="Сброс">Сброс</button> -->
-                        </div>
-                    </div>
-                </form>
-
             </div>
         </div>
+        <form class="form-control-lg border border-2 rounded mt-4" action="{% url 'wide:confirm' order.id %}"
+            method="post" enctype="multipart/form-data">
+
+            <div class="row">
+                {% csrf_token %}
+                {{ form.type_production }}
+
+                <div class="pb-4">
+                    <p>Прикрепите файл: </p>{{ form.file }}
+                </div>
+
+                <div>
+                    <p>Kомментарий к заказу:</p>
+                    <p>{{ form.comment }}</p>
+                </div>
+            </div>
+
+            <!-- Данные клиента -->
+            <br>
+            <div class="row p-3 mx-1 border border-success border-2 rounded">
+                <h3>Контактные данные:</h3>
+                <div class="col">
+                    <p>Имя: </p>{{ form.name }}
+                </div>
+                <div class="col">
+                    <p>E-mail: </p>{{ form.email }}
+                </div>
+                <div class="col">
+                    <p>Телефон: </p>{{ form.tel }}
+                </div>
+            </div>
 
 
-
-
+            <div class="row pt-4">
+                <div class="col ">
+                    <button style="width: 200px;" type="submit"
+                        class="yes_button btn btn-success  mx-1">Заказать</button>
+                    <div>
+                        <h6 style="padding-left: 5px;">Нажмите "заказать", что бы отправить нам заказ.</h6>
+                    </div>
+                </div>
+            </div>
+        </form>
 
     </div>
-
-    <br><br>
-
+</div>
 
 
-    {% endblock %}
+
+
+
+
+<br><br>
+
+
+
+{% endblock %}
