--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- Верхняя строка -->
 	<div class="container pt-4">
-		<div class="top_line row d-flex justify-content-center align-items-center shadow border rounded  p-3">
+		<div class="top_line row bg-light shadow border rounded d-flex justify-content-center align-items-center shadow border rounded p-3">
 			<div class="col">
 				<a href="/">
 					<img class="main_logo" src="{% static '/tipkor/img/logo.svg' %}" alt="">
@@ -59,12 +59,12 @@
 	</div>
 
 	<!-- Навигация -->
-	<div class="container pt-4">
-		<div class="top_buttons d-flex justify-content-center">
+	<div class="container my-4 py-2 bg-light shadow border rounded">
+		<div class="top_buttons d-flex justify-content-center ">
 
 			<!-- Топ кнопки с выпадающим меню -->
 			<div class="dropdown d-flex flex-fill">
-				<a class="btn btn-primary flex-fill btn-lg m-1 dropdown-toggle" href="#poly" role="button"
+				<a class="btn btn-primary flex-fill btn-lg my-3 mx-2 dropdown-toggle" href="#poly" role="button"
 					id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					Полиграфия (офсет)
 				</a>
@@ -76,7 +76,7 @@
 			</div>
 
 			<div class="dropdown d-flex flex-fill">
-				<a class="btn btn-primary flex-fill btn-lg m-1 dropdown-toggle" href="#wide" role="button"
+				<a class="btn btn-primary flex-fill btn-lg my-3 mx-2 dropdown-toggle" href="#wide" role="button"
 					id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					Широкоформатная печать
 				</a>
@@ -88,7 +88,7 @@
 			</div>
 
 			<div class="dropdown d-flex flex-fill">
-				<a class="btn btn-primary flex-fill btn-lg m-1 dropdown-toggle" href="#stamp" role="button"
+				<a class="btn btn-primary flex-fill btn-lg my-3 mx-2 dropdown-toggle" href="#stamp" role="button"
 					id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
 					Печати и штампы
 				</a>
@@ -106,8 +106,8 @@
 
 
 	<!-- FOOTER -->
-	<div class="container">
-		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+	<div class="container bg-light shadow border rounded">
+		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 ">
 			<div class="col-md-4 d-flex align-items-center">
 				<a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
 					<svg class="bi" width="30" height="24">
