--- a/tipkor/wide/templates/wide/table.html
+++ b/tipkor/wide/templates/wide/table.html
@@ -39,7 +39,7 @@
 <!-- Форма -->
 <div class="container">
     <hr width="100%" size="8" color="#0d6efd" />
-    <h1 id="after_calc" class="title_text pt-3">Печать широкоформатных наклеек</h1>
+    <h1 id="after_calc" class="title_text pt-3">Изготовление табличек</h1>
 
     <div class="calc_form border shadow rounded p-3 mt-4">
 
