--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -17,25 +17,22 @@
 <body>
 	<!-- Верхняя строка -->
 	<div class="container pt-4">
-		<div class="top_line row bg-light shadow border rounded d-flex justify-content-center align-items-center shadow border rounded p-3">
-			<div class="col">
+		<div
+			class="top_line row bg-light shadow border rounded d-flex justify-content-center align-items-center shadow border rounded p-3">
+			<div class="col d-flex justify-content-center ">
 				<a href="/">
 					<img class="main_logo" src="{% static '/tipkor/img/logo.svg' %}" alt="">
 				</a>
 			</div>
 			<!-- телефон -->
 			<div class="col hi_telefon">
-				<p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p>
+				<div>
+					<p class="fs-3 mb-0"><strong>8 (964) 571-65-51</strong></p>
+				</div>
 			</div>
 			<!-- график работы -->
-			<div class="hi_grafic col " style="text-align: center;">
+			<div class="col hi_grafic" style="text-align: center;">
 				<p class="fs-4  mb-0">пн-пт 10:00-18:00</p>
-			</div>
-			<!-- кнопка на страницу контактов -->
-			<div class="hi_contacts col-1 " style="text-align: center;">
-				<a class="btn btn-primary" href="#contacts" role="button">
-					Контакты
-				</a>
 			</div>
 
 			<div class="hi_watssap col-md-2 ">
