--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -6,19 +6,19 @@
 <!-- Картинка -->
 
 <!-- Описание главная -->
-<div class="container py-3 bg-light shadow border rounded">
-    <div class="row  ">
-        <div class="container-top">
+<!-- <div class="container py-3 bg-light shadow border rounded">
+    <div class="row p-4 nopadding"> -->
+        <div class="container py-3 container-top shadow border rounded">
             <img src="{% static '/tipkor/img/image_top.jpg' %}" alt="Snow" class="w-100 rounded">
-            <div class="centered w-75">
+            <div class="centered w-100">
                 <h1 class="top_text">ОФСЕТНАЯ ПЕЧАТЬ, ШИРОКОФОРМАТНАЯ ПЕЧАТЬ, ПЕЧАТИ И ШТАМПЫ</h1>
             </div>
         </div>
-    </div>
-</div>
+    <!-- </div>
+</div> -->
 
 <!-- Полиграфия -->
-<div class="container bg-light shadow border rounded mt-4 pb-3">
+<div class="container bg-light shadow border rounded mt-4 pb-3 ">
     <div class="row py-2">
         <h1 id="titles">Полиграфия (офсетная печать)</h1>
         <hr>
@@ -27,7 +27,7 @@
     <div class="row row-col-4">
         <!-- карточка вида заказа -->
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3 border border-3">
                 <h3 class="card-header">Визитки</h3>
                 <img src="{% static '/tipkor/img/card.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -41,7 +41,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Листовки</h3>
                 <img src="{% static '/tipkor/img/leaflet.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -55,7 +55,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Буклеты</h3>
                 <img src="{% static '/tipkor/img/booklet.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -81,7 +81,7 @@
     <div class="row row-col-4">
         <!-- карточка вида заказа -->
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Баннеры</h3>
                 <img src="{% static '/tipkor/img/banner.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -94,7 +94,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Наклейки</h3>
                 <img src="{% static '/tipkor/img/sticker.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -107,7 +107,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Таблички</h3>
                 <img src="{% static '/tipkor/img/tablets.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -132,7 +132,7 @@
     <div class="row row-col-3 justify-content-start">
         <!-- карточка вида заказа -->
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Печати ИП, ООО</h3>
                 <img src="{% static '/tipkor/img/c_stamp.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -145,7 +145,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Наклейки</h3>
                 <img src="{% static '/tipkor/img/r_stamp.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
@@ -158,7 +158,7 @@
         </div>
 
         <div class="col">
-            <div class="card text-center mx-3 mb-2">
+            <div class="card text-center mx-3 mb-2  border border-3">
                 <h3 class="card-header">Другие услуги</h3>
                 <!-- <img src="{% static '/tipkor/img/r_stamp.jpg' %}" class="card-img-top" alt="..."> -->
                 <div class="card-body d-grid gap-2">
