--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -35,21 +35,19 @@
 				<p class="fs-4  mb-0">пн-пт 10:00-18:00</p>
 			</div>
 
-			<div class="hi_watssap col-md-2 ">
+			<div class="hi_mess col-md-2 ">
+
 				<div class="img_mess">
 					<a href="https://wa.me/79645716551?text=" target="_blank">
-						<img id="hi_mess" src="{% static '/tipkor/img/whatsap.svg' %}" alt="">
+						<img id="hi_mess" src="{% static '/tipkor/img/whatsap.svg' %}" alt="" style="padding-left: 5px">
 						<a href="https://wa.me/79645716551?text=" target="_blank"
-							style="font-weight: 800; font-size: large; padding-left: 5px">Whatssap</a>
+							style="font-weight: 800; font-size: large; padding-left: 2px">Whatssap</a>
 					</a>
-				</div>
-			</div>
-			<div class="hi_teleg col-md-2 ">
-				<div class="img_mess">
+
 					<a href="https://t.me/+79645716551" target="_blank">
-						<img id="hi_mess" src="{% static '/tipkor/img/telegram.svg' %}" alt="">
+						<img id="hi_mess" src="{% static '/tipkor/img/telegram.svg' %}" alt="" style="padding-left: 5px">
 						<a href="https://t.me/+79645716551" target="_blank"
-							style="font-weight: 800; font-size: large; padding-left: 5px">Telegram</a>
+							style="font-weight: 800; font-size: large; padding-left: 2px">Telegram</a>
 				</div>
 			</div>
 		</div>
@@ -111,7 +109,7 @@
 						<use xlink:href="#bootstrap" />
 					</svg>
 				</a>
-				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2023 tipkor.ru</span>
+				<span class="mb-3 mb-md-0 text-body-secondary">&copy; 2014-2023 tipkor.ru</span>
 			</div>
 
 			<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
