--- a/tipkor/tipkor/static/tipkor/css/tipkor.css
+++ b/tipkor/tipkor/static/tipkor/css/tipkor.css
@@ -3,7 +3,7 @@ p {
 }
 
 body {
-    background: linear-gradient(-45deg, #d788bb, #b39ae8, #85c7df, #9bdbcc);
+    background: linear-gradient(-45deg, #fbc0e7, #d0bbff, #a6e7ff, #c8fef1);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
     height: 100vh;
