--- a/tipkor/poly/templates/poly/card.html
+++ b/tipkor/poly/templates/poly/card.html
@@ -12,7 +12,7 @@
 
 
 <!-- Заголовок коллапс блока -->
-<div class="container">
+<div class="container shadow border rounded">
     <div class="card_collapse_block">
         <div class="container py-3">
             <a class="" data-bs-toggle="collapse" href="#snap_items_collapse" aria-expanded="true"
@@ -38,8 +38,8 @@
 
 
 <!-- Форма -->
-<div class="container">
-    <hr width="100%" size="8" color="#0d6efd" />
+<div class="container bg-light shadow border rounded my-3 pb-2">
+    <!-- <hr width="100%" size="8" color="#0d6efd" /> -->
     <h1 id="after_calc" class="title_text pt-3">Печать визиток</h1>
 
     <div class="calc_form border shadow rounded p-3 mt-4">
