--- a/tipkor/tipkor/templates/tipkor/base.html
+++ b/tipkor/tipkor/templates/tipkor/base.html
@@ -18,7 +18,7 @@
 	<!-- Верхняя строка -->
 	<div class="container pt-4">
 		<div
-			class="top_line row bg-light shadow border rounded d-flex justify-content-center align-items-center shadow border rounded p-3">
+			class="top_line row bg-light shadow border d-flex justify-content-center align-items-center rounded p-3">
 			<div class="col d-flex justify-content-center ">
 				<a href="/">
 					<img class="main_logo" src="{% static '/tipkor/img/logo.svg' %}" alt="">
