--- a/tipkor/poly/templates/poly/confirm.html
+++ b/tipkor/poly/templates/poly/confirm.html
@@ -10,10 +10,10 @@
 <br>
 
 
-<div class="container">
+<div class="container bg-success bg-opacity-25 shadow rounded">
 
-    <div class="confirm_order border shadow rounded p-3">
-        <div class="row py-3 mx-1 border border-bg-secondary border-2 rounded bg-light">
+    <div class="confirm_order py-3">
+        <div class="row py-3 mx-1 rounded bg-light shadow">
 
             <div class="row px-3">
                 <h1 id="a_confirm">Подтверждение заказа</h1>
@@ -35,8 +35,8 @@
             </div>
         </div>
 
-        <form class="form-control-lg border border-2 rounded mt-4" action="{% url 'poly:confirm' order.id %}"
-            method="post" enctype="multipart/form-data">
+        <form class="form-control-lg bg-light bg-opacity-75 shadow border rounded mt-4 mx-1 "
+            action="{% url 'poly:confirm' order.id %}" method="post" enctype="multipart/form-data">
 
             <div class="row">
                 {% csrf_token %}
@@ -54,7 +54,7 @@
 
             <!-- Данные клиента -->
             <br>
-            <div class="row p-3 mx-1 border border-success border-2 rounded">
+            <div class="row p-3 mx-1 border border-success bg-success bg-opacity-25 border-2 rounded">
                 <h3>Контактные данные:</h3>
                 <div class="col">
                     <p>Имя: </p>{{ form.name }}
