--- a/tipkor/poly/templates/poly/success.html
+++ b/tipkor/poly/templates/poly/success.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" type="text/css" href="{% static 'poly/css/card.css' %}">
 </head>
 <br>
-<br>
-<br>
 
 
-<div class="container">
-    <div class="confirm_order border shadow rounded p-3">
+
+<div class="container rounded bg-light shadow p-3">
+    <div class="confirm_order ">
         <div class="row">
 
             <h2 id="a_success">Заказ №{{ order.id }} размещен от {{ order.create_date }}</h2>
