--- a/tipkor/stamp/templates/stamp/success.html
+++ b/tipkor/stamp/templates/stamp/success.html
@@ -13,7 +13,7 @@
 
 
 <div class="container">
-    <div class="confirm_order border shadow rounded p-3">
+    <div class="confirm_order rounded bg-light shadow p-3">
         <div class="row">
 
             <h2 id="a_success">Заказ №{{ order.id }} размещен от {{ order.create_date }}</h2>
