--- a/tipkor/tipkor/templates/tipkor/tipkor.html
+++ b/tipkor/tipkor/templates/tipkor/tipkor.html
@@ -27,7 +27,7 @@
     <div class="row row-col-4">
         <!-- карточка вида заказа -->
         <div class="col">
-            <div class="card text-center mx-3 mb-2  border border-3 border border-3">
+            <div class="card text-center mx-3 mb-2 border border-3">
                 <h3 class="card-header">Визитки</h3>
                 <img src="{% static '/tipkor/img/card.jpg' %}" class="card-img-top" alt="...">
                 <div class="card-body d-grid gap-2">
